k8s/config/namespace-development.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: trading-development
  labels:
    name: trading-development
    environment: development
    app: day-trade-system
---
...
